--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             </div>
                             <div class="mt-3">
                                 <button class="">
-                                    <a href="http://" class="btn btn-1 text-lg">REQUEST A QUOTE</a>
+                                    <a href="./services.html" class="btn btn-1 text-lg">REQUEST A QUOTE</a>
                                 </button>
                             </div>
 
