--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@
                                     <h1 class="font-bold font-open_sans text-2xl text-black">Borehole and Exploration
                                         Drilling:
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             With expertise in borehole and exploration drilling, Phanserv gathers
                                             essential data on subsurface conditions, aiding in foundation design and
@@ -214,7 +214,7 @@
                                     <h1 class="font-bold font-open_sans text-2xl text-black">Environmental Impact
                                         Assessments and Audits
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             Phanserv conducts thorough environmental impact assessments and audits to
                                             ensure compliance with regulations and sustainable practices in development
@@ -234,7 +234,7 @@
                                         Development:
 
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             Phanserv provides geotechnical services for a diverse range of development
                                             projects, including rural, township, and urban areas, meeting the unique
@@ -253,7 +253,7 @@
                                     <h1 class="font-bold font-open_sans text-2xl text-black">Foundation Analysis:
 
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             Phanserv's foundation analysis services guarantee the selection of the most
                                             suitable foundation types and designs for stability and longevity.
@@ -271,7 +271,7 @@
                                     <h1 class="font-bold font-open_sans text-2xl text-black">DCP, DPL, and DPSH Testing:
 
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             Phanserv employs dynamic cone penetration (DCP), dynamic plate load (DPL),
                                             and dynamic probing super heavy (DPSH) testing methods to assess soil
@@ -290,7 +290,7 @@
                                         Percussion Chip Logging:
 
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             Phanserv's borehole core profiling and percussion chip logging services
                                             provide valuable information about the subsurface layers, aiding in
@@ -308,7 +308,7 @@
                                     <h1 class="font-bold font-open_sans text-2xl text-black">Percolation Tests:
 
                                     </h1>
-                                    <ul class="text-gray-700 text-sm font-sans list-disc p-2">
+                                    <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
                                             Phanserv conducts percolation tests to assess the rate at which water can
                                             infiltrate the soil, vital for the design of drainage systems and wastewater
@@ -321,11 +321,11 @@
                         </li>
                     </ul>
                     <div class="text-center">
-                        <blockquote class="text-gray-700 font-bold text-base">
+                        <blockquote class="text-gray-500 font-semibold text-base">
                             "Phanserv's comprehensive range of geotechnical services, coupled with their team's
                             expertise
                             and commitment to excellence, make them the trusted choice for successful and reliable
-                            project outcomes across various industries in South Africa." __ Phanserv CEO
+                            project outcomes across various industries in South Africa." - Phanserv CEO
                         </blockquote>
                     </div>
                 </div>
