--- a/about.html
+++ b/about.html
@@ -492,16 +492,18 @@
         </section>
     </main>
     <footer class="text-[hsl(0,_0%,_91%)] bg-[hsl(202,_72%,_15%)]">
-        <div class="mx-7 md:mx-[7.5rem]">
+        <div class="container">
 
             <div class="grid gap-10 py-11 md:py-12 md:grid-cols-4 md:justify-items-end">
 
-                <div class="footer-brand">
+                <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
                     <a href="#" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
                     <p class="footer-text" style="margin-block: 10px 30px;">
-                        Many desktop publishing packages and web page editors now use are dolra Ipsum as their default.
+                        We take pride in our service track record, and we are confident we can exceed your
+                        expectations. Phanserv performs feasibility studies, preliminary engineering studies and
+                        detailed geotechnical studies and reports
                     </p>
 
                     <ul class="flex gap-3">
@@ -524,18 +526,21 @@
                             </a>
                         </li>
 
-
+                        <li>
+                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                                <i class="bx bxl-youtube"></i>
+                            </a>
+                        </li>
 
                     </ul>
 
                 </div>
 
-                <ul class="space-y-5">
+                <ul data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1500" class="space-y-5">
 
                     <li>
                         <p class="text-xl max-w-max mb-2 border-b-2 border-b-solid border-b-custom-orange pb-2">Quick
-                            Links
-                        </p>
+                            Links</p>
                     </li>
 
                     <li>
@@ -556,7 +561,7 @@
 
                 </ul>
 
-                <ul class="space-y-5">
+                <ul data-aos="fade-right" data-aos-duration="1500" data-aos-delay="2000" class="space-y-5">
 
                     <li>
                         <p class="text-xl max-w-max mb-2 border-b-2 border-b-solid border-b-custom-orange pb-2">Services
