--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <i class="bx bx-envelope-open text-black text-2xl"></i>
                             <div>
                                 <a class="font-semibold text-black text-base" href=""
-                                    id="contact-email">phanserv@gmail.com</a>
+                                    id="contact-email">info@phanserv.co.za</a>
                                 <p class="text-custom-orange text-sm font-regular">Send Email</p>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                 <div class="overlay w-full h-full top-0 bg-[rgba(0,0,0,0.66)] left-0 absolute "></div>
                 <div class="w-full h-full">
                     <div class="w-full h-full">
-                        <img src="/Assets/images/img4.jpg" alt="" class="object-cover w-full h-full">
+                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
                         <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000"
                             class="absolute top-[40%] mx-9 md:mx-[7.5rem] font-open_sans space-y-5 md:w-[55.25rem]">
                             <div data-aos="fade-left" data-aos-easing="ease-in-sine" data-aos-duration="1500"
@@ -150,11 +150,11 @@
                     </div>
                     <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" class="space-y-6 md:w-2/4">
                         <div class="space-y-4">
-                            <h4 class=" text-base md:text-lg text-custom-orange">Leading The Way In Geotechnology and
-                                Civil Construction</h4>
-                            <h1 class="text-3xl md:text-5xl font-bold text-black font-open_sans">
+                            <span class=" text-base md:text-lg text-custom-orange">Leading The Way In Geotechnology and
+                                Civil Construction</span>
+                            <h2 class="text-3xl md:text-5xl font-bold text-black font-open_sans">
                                 Phanserv A Geotechnology Company
-                            </h1>
+                            </h2>
                         </div>
                         <div class="text space-y-3">
                             <p class="text-gray-500 text-sm md:text-base font-sans">
@@ -232,8 +232,8 @@
             <div class="container">
                 <div class="space-y-6 md:space-y-9 grid items-center justify-center text-center">
                     <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" class="space-y-3">
-                        <p class="text-xl font-semibold text-custom-orange">Our Services</p>
-                        <h1 class="text-bold text-black font-bold text-3xl font-open_sans">Quality Geotech Services</h1>
+                        <span class="text-xl font-semibold text-custom-orange">Our Services</span>
+                        <h2 class="text-bold text-black font-bold text-3xl font-open_sans">Quality Geotech Services</h2>
                         <p class="text-base text-gray-700">
                             Phanserv is a premier geotechnical solutions provider in South Africa, offering an extensive
                             range of services to cater to diverse project needs. With a team of qualified engineering
@@ -252,14 +252,11 @@
                             </div>
                             <div class="text-center grid items-center justify-center">
                                 <div class="mb-4 space-y-4">
-                                    <h1 class="text-black text-xl font-open_sans font-bold">Foundation Investigations
-                                    </h1>
+                                    <h3 class="text-black text-xl font-open_sans font-bold">Geotechnical Investigations
+                                    </h3>
                                     <p class="text-base text-gray-500">
-                                        The Phanserv’s experience base, capabilities and services are wide ranging in
-                                        various
-                                        geotechnical
-                                        environments,
-                                        ore bodies...
+                                        Phanserv conducts thorough investigations to provide expert recommendations for
+                                        structures, foundations, roads, and civil construction...
                                     </p>
                                 </div>
                                 <div
@@ -274,19 +271,16 @@
                         <div
                             class="w-72 h-full relative rounded-md pl-4 pr-4 py-4 ml-auto mr-auto text-start group shadow-2xl bg-white space-y-2">
                             <div class="relative overflow-hidden">
-                                <img src="/Assets/images/img3.jpg" alt="" srcset=""
+                                <img src="/Assets/images/img3.jpg" alt="bore hole drilling" srcset=""
                                     class="duration-500 group-hover:scale-110  z-10">
                             </div>
                             <div class="text-center grid items-center justify-center">
                                 <div class="mb-4 space-y-4">
-                                    <h1 class="text-black text-xl font-open_sans font-bold">Geotechnical
-                                        Engineering</h1>
+                                    <h3 class="text-black text-xl font-open_sans font-bold">Geotechnical
+                                        Engineering</h3>
                                     <p class="text-base text-gray-500">
-                                        The Phanserv’s experience base, capabilities and services are wide ranging in
-                                        various
-                                        geotechnical
-                                        environments,
-                                        ore bodies...
+                                        With expertise in borehole and exploration drilling, Phanserv gathers essential
+                                        data on subsurface conditions, aiding in foundation design...
                                     </p>
                                 </div>
                                 <div
@@ -301,18 +295,15 @@
                         <div
                             class="w-72 h-full relative rounded-md pl-4 pr-4 py-4 ml-auto mr-auto text-start group shadow-2xl bg-white space-y-2">
                             <div class="relative overflow-hidden">
-                                <img src="/Assets/images/img6.jpg" alt="" srcset=""
-                                    class="duration-500 group-hover:scale-110  z-10">
+                                <img src="/Assets/images/img/img-1.jpg" alt="soil classification" srcset=""
+                                    class="duration-500 group-hover:scale-110 h-52 w-full z-10">
                             </div>
                             <div class="text-center grid items-center justify-center">
                                 <div class="mb-4 space-y-4">
-                                    <h1 class="text-black text-xl font-open_sans font-bold">Reporting & Analysis</h1>
+                                    <h3 class="text-black text-xl font-open_sans font-bold">Reporting & Analysis</h3>
                                     <p class="text-base text-gray-500">
-                                        The Phanserv’s experience base, capabilities and services are wide ranging in
-                                        various
-                                        geotechnical
-                                        environments,
-                                        ore bodies...
+                                        Phanserv's foundation analysis services guarantee the selection of the most
+                                        suitable foundation...
                                     </p>
                                 </div>
                                 <div
@@ -368,16 +359,16 @@
                     </div>
                     <div
                         class="md:flex-[0.5] overflow-hidden hidden relative md:block md:h-screen border-2 border-custom-orange border-solid">
-                        <img src="/Assets/images/about-3.jpg" class=" md:h-screen md:w-full object-cover" />
+                        <img src="/Assets/images/about-3.jpg" alt="construction analysis" class=" md:h-screen md:w-full object-cover" />
                         <div class="absolute top-1/2 space-y-6 -translate-y-1/2">
                             <div class="bg-custom-orange text-white p-6">
-                                <div class="space-y-3 grid">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" class="space-y-3 grid">
                                     <strong class="text-3xl font-bold">63</strong>
                                     <span class="text-lg uppercase">Projects Completed</span>
                                 </div>
                             </div>
                             <div class="bg-white text-custom-blue p-6">
-                                <div class="space-y-3 grid">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600" class="space-y-3 grid">
                                     <strong class="text-3xl font-bold">20</strong>
                                     <span class="text-lg uppercase">HAPPY CUSTOMERS</span>
                                 </div>
@@ -392,7 +383,7 @@
                 <div class="space-y-9 py-9 grid items-center justify-center">
                     <div class="space-y-3 text-center">
                         <p class="text-xl uppercase font-sans text-custom-orange">Our Projects</p>
-                        <h1 class="text-bold text-black font-bold font-open_sans text-3xl">Featured Projects</h1>
+                        <h4 class="text-bold text-black font-bold font-open_sans text-3xl">Featured Projects</h4>
                     </div>
                     <div class="grid items-center justify-center grid-cols-1 md:grid-cols-3">
                         <div class="relative group transition-all duration-500 overflow-hidden">
@@ -406,7 +397,7 @@
                                 class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
                                 <div class="text-white space-y-3">
                                     <h5 class="text-xl font-">Eastern cape</h5>
-                                    <p class="text-3xl font-semibold">Bridge construction</p>
+                                    <p class="text-3xl font-semibold">Borehole construction</p>
                                 </div>
                             </div>
                         </div>
@@ -422,7 +413,7 @@
                                 class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
                                 <div class="text-white space-y-3">
                                     <h5 class="text-xl font-">Eastern cape</h5>
-                                    <p class="text-3xl font-semibold">Bridge construction</p>
+                                    <p class="text-3xl font-semibold">construction</p>
                                 </div>
                             </div>
                         </div>
@@ -438,7 +429,7 @@
                                 class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
                                 <div class="text-white space-y-3">
                                     <h5 class="text-xl font-">Eastern cape</h5>
-                                    <p class="text-3xl font-semibold">Bridge construction</p>
+                                    <p class="text-3xl font-semibold">Foundation investigation and construction</p>
                                 </div>
                             </div>
                         </div>
@@ -455,7 +446,7 @@
                                 class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
                                 <div class="text-white space-y-3">
                                     <h5 class="text-xl font-">Eastern cape</h5>
-                                    <p class="text-3xl font-semibold">Bridge construction</p>
+                                    <p class="text-3xl font-semibold">Construction</p>
                                 </div>
                             </div>
                         </div>
@@ -472,7 +463,7 @@
                                 class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
                                 <div class="text-white space-y-3">
                                     <h5 class="text-xl font-">Eastern cape</h5>
-                                    <p class="text-3xl font-semibold">Bridge construction</p>
+                                    <p class="text-3xl font-semibold">Road analysis and construction</p>
                                 </div>
                             </div>
                         </div>
@@ -489,7 +480,7 @@
                                 class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
                                 <div class="text-white space-y-3">
                                     <h5 class="text-xl font-">Eastern cape</h5>
-                                    <p class="text-3xl font-semibold">Bridge construction</p>
+                                    <p class="text-3xl font-semibold">Brick Wall construction</p>
                                 </div>
                             </div>
                         </div>
@@ -511,9 +502,9 @@
                             <i class='bx bxs-phone'></i>
                         </div>
                         <div class="space-y-2">
-                            <h1 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
+                            <h4 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
                                 Call Us:
-                            </h1>
+                            </h4>
                             <div>
                                 <p class="text-sm md:text-base font-normal text-white">
                                     +27835132008
@@ -530,16 +521,14 @@
                             <i class='bx bxs-envelope'></i>
                         </div>
                         <div class="space-y-2">
-                            <h1 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
+                            <h4 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
                                 Email Us:
-                            </h1>
+                            </h4>
                             <div>
-                                <a href="mailto:info@phanserv.co.za"
-                                    class="block text-sm md:text-base font-normal text-white">
+                                <a href="" id="contact-email" class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
-                                <a href="mailto:info@phanserv.co.za"
-                                    class="block text-sm md:text-base font-normal text-white">
+                                <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
                                     accounts@phanserv.co.za
                                 </a>
                             </div>
@@ -550,9 +539,9 @@
                             <i class='bx bx-current-location'></i>
                         </div>
                         <div class="space-y-2">
-                            <h1 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
+                            <h4 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
                                 Visit Us:
-                            </h1>
+                            </h4>
                             <div>
                                 <p class="text-sm md:text-base font-normal text-white">
                                     22 Gerald Spilkin Street,
@@ -595,22 +584,13 @@
                         </li>
 
                         <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
-                                <i class="bx bxl-twitter"></i>
+                            <a href="" id="contact-email"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                                <i class="bx bx-envelope"></i>
                             </a>
                         </li>
 
-                        <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
-                                <i class="bx bxl-instagram"></i>
-                            </a>
-                        </li>
 
-                        <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
-                                <i class="bx bxl-youtube"></i>
-                            </a>
-                        </li>
 
                     </ul>
 
@@ -683,7 +663,10 @@
                     </li>
 
                     <li>
-                        <a href="#" class="">Testimonials</a>
+                        <a href="" id="contact-email" class="">info@phanserv.co.za</a>
+                    </li>
+                    <li>
+                        <a href="" class="contact-email">+27835132008</a>
                     </li>
 
                     <li>
@@ -700,7 +683,7 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>
+                    by <a href="#" class="">wethink_</a>  |  <a href="./terms.html">Terms & Conditions</a>  |  &boxh;<a href="./terms.html">Privacy Policy</a>
                 </p>
             </div>
 
