--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A Specialist Geotechnical Solutions Company With a Team of Qualified And Competent Engineering Geologists And Professional Civil Technician, Which Work Closely Together To Provide a Geotechnical Services Which Far Exceed The Industry Standards. We Are Committed To Provide...
+    <meta name="description" content="Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading geotechnical solutions and services provider in South Africa, renowned for its team of qualified engineering geologists and professional civil technicians...
 
 ">
     <meta name="keywords"
-        content="Geotechnical solutions,soil classification, about Phaneretic services,geotechnical engineering,geotechnical investigations,civil construction, borrow pit investigation,borehole core profiling">
+        content="Geotechnical Investigations,Borehole and Exploration Drilling,including rural,township,and urban development,Concrete Strength Testing,Trial Pit Profiling and Excavations,Water Quality Testing,Borehole and Exploration Drilling,Environmental Impact Assessments and Audits,Rural,Township,and Urban Development,Foundation Analysis,DCP, DPL, and DPSH Testing,Borehole Core Profiling or Percussion Chip Logging">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -54,7 +54,7 @@
                             <i class="bx bx-envelope-open text-black text-2xl"></i>
                             <div>
                                 <a class="font-semibold text-black text-base" href=""
-                                    id="contact-email">phanserv@gmail.com</a>
+                                    id="contact-email">info@phanserv.co.za</a>
                                 <p class="text-custom-orange text-sm font-regular">Send Email</p>
                             </div>
                         </div>
@@ -110,10 +110,10 @@
                 <div class="overlay w-full h-full top-0 bg-[rgba(25,36,56,0.52)] left-0 absolute "></div>
                 <div class="w-full h-full ">
                     <div class="w-full h-full">
-                        <img src="/Assets/images/img4.jpg" alt="" class="object-cover w-full h-full">
+                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
                         <div class="absolute top-[60%] left-[30%]  mx-9 md:mx-[7.5rem] font-open_sans space-y-5">
 
-                            <h1 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">About Us</h1>
+                            <h3 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">About Us</h3>
                             <p class="text-base md:text-2xl text-white font-sans">
 
                             </p>
@@ -132,14 +132,14 @@
                     </div>
                     <div class="space-y-6 md:w-2/4">
                         <div class="space-y-3">
-                            <h4 class="font-semibold text-lg md:text-xl uppercase text-custom-orange">WHO WE ARE?</h4>
+                            <span class="font-semibold text-lg md:text-xl uppercase text-custom-orange">WHO WE ARE?</span>
                             <h1 class="text-3xl md:text-4xk font-bold text-black font-open_sans">
-                                Safe, Reliable And Greate Geotechnology Services That Exceeds Your Expectations
+                                Safe, Reliable And Affordable Geotechnology Services That Exceeds Your Expectations
                             </h1>
                         </div>
                         <div class="text">
                             <p class="text-gray-500 text-sm font-sans mb-2">
-                                Established in 2017 - Phaneretic Services (Phanserv) is a leading geotechnical
+                                Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading geotechnical
                                 solutions and services provider in South Africa, renowned for its team of qualified
                                 engineering geologists and professional civil technicians.
                             </p>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="mt-3">
                                 <button class="">
-                                    <a href="./services.html" class="btn btn-1 text-lg">REQUEST A QUOTE</a>
+                                    <a href="./contact.html" class="btn btn-1 text-lg">REQUEST A QUOTE</a>
                                 </button>
                             </div>
 
@@ -219,8 +219,8 @@
                 <div class="gap-10 flex items-center flex-col md:flex-row w-full justify-between">
                     <div class="space-y-7 md:w-2/4">
                         <div class="space-y-5">
-                            <h4 class="font-semibold font-sans text-lg md:text-xl text-custom-orange uppercase">Why
-                                Choose Us?</h4>
+                            <span class="font-semibold font-sans text-lg md:text-xl text-custom-orange uppercase">Why
+                                Choose Us?</span>
                             <h2 class="font-semibold font-open_sans text-2xl md:text-3xl text-black">
                                 We provide the ideal combination of competent technical expertise
                                 and professional integrity
@@ -253,19 +253,19 @@
                             </p>
 
                             <div class="grid items-center md:grid-cols-2 gap-3">
-                                <div class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">Expert Team</p>
                                 </div>
-                                <div class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600" class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">Timely Delivery</p>
                                 </div>
-                                <div class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900" class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">Best Equipment</p>
                                 </div>
-                                <div class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1200" class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">100% guaranty quality services</p>
                                 </div>
@@ -275,15 +275,15 @@
                     </div>
                     <div class="space-y-6 hidden md:block">
                         <div class="flex w-full items-center space-x-10">
-                            <div class="space-y-1 w-24">
+                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300" class="space-y-1 w-24">
                                 <h4 class="text-3xl text-custom-orange font-semibold font-open_sans">67</h4>
                                 <p class="text-sm text-custom-blue font-normal font-sans">Completed Projects</p>
                             </div>
-                            <div class="space-y-1 w-24">
+                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600" class="space-y-1 w-24">
                                 <h4 class="text-3xl text-custom-orange font-semibold font-open_sans">5</h4>
                                 <p class="text-sm text-custom-blue font-normal font-sans">Qualified Employees</p>
                             </div>
-                            <div class="space-y-1 w-24">
+                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="900" class="space-y-1 w-24">
                                 <h4 class="text-3xl text-custom-orange font-semibold font-open_sans">7</h4>
                                 <p class="text-sm text-custom-blue font-normal font-sans">Years of experience</p>
                             </div>
@@ -299,23 +299,23 @@
             <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000"
                 class="w-full relative h-full  overflow-hidden">
                 <div class="overlay w-full h-full top-0 bg-[rgba(19,29,47,0.77)] left-0 absolute "></div>
-                <img src="/Assets/images/img3.jpg" alt="" class="w-full h-full object-cover" />
+                <img src="/Assets/images/img3.jpg" alt="phanserv construction team working" class="w-full h-full object-cover" />
                 <div class="absolute top-2/4 left-2/4 translate-x-[-50%] translate-y-[-50%]">
                     <div
                         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 items-center justify-between gap-7 sm:gap-20 w-full">
-                        <div class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="" class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">7</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Years Of Expirience</p>
                         </div>
-                        <div class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">67</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Completed Projects</p>
                         </div>
-                        <div class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">25</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Satisfied Clients</p>
                         </div>
-                        <div class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">5</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Qualified Employees</p>
                         </div>
@@ -328,7 +328,7 @@
                 <div class=" grid justify-center gap-y-7">
                     <div class="flex flex-col md:flex-row items-center gap-7">
                         <div class="space-y-4">
-                            <h5 class="text-custom-blue text-xl md:text-2xl font-bold font-open_sans">Partnership</h5>
+                            <h5 class="text-black text-xl md:text-2xl font-bold font-open_sans">Partnership</h5>
                             <p class="text-sm font-sans text-gray-500">
                                 Phaneretic Services (Pty) Ltd works in close collaboration
                                 with competent, experienced and independent geotech-
@@ -411,11 +411,11 @@
                         services encompass:
                     </p>
                     <p class="text-base text-gray-500 font-medium">
-                        Geotechnical Investigations - Borehole and Exploration Drilling - including rural, township, and
-                        urban development - Concrete Strength Testing - Trial Pit Profiling and Excavations - Water
-                        Quality Testing - Borehole and Exploration Drilling - Environmental Impact Assessments and
-                        Audits - Rural, Township, and Urban Development - Foundation Analysis - DCP, DPL, and DPSH
-                        Testing - Borehole Core Profiling or Percussion Chip Logging
+                        Geotechnical Investigations &dash; Borehole and Exploration Drilling &dash; including rural, township, and
+                        urban development &dash; Concrete Strength Testing &dash; Trial Pit Profiling and Excavations &dash; Water
+                        Quality Testing &dash; Borehole and Exploration Drilling &dash; Environmental Impact Assessments and
+                        Audits &dash; Rural, Township, and Urban Development &dash; Foundation Analysis &dash; DCP, DPL, and DPSH
+                        Testing &dash; Borehole Core Profiling or Percussion Chip Logging
                     </p>
                 </div>
             </div>
@@ -423,18 +423,18 @@
         <section class="w-full py-6 bg-custom-orange grid">
             <div class="mx-9 md:mx-[7.5rem]">
                 <div class="w-full justify-between flex flex-col md:flex-row gap-8">
-                    <div class="self-start">
+                    <div data-aos="fade-right" class="self-start">
                         <h4 class="font-semibold text-xl md:text-2xl text-custom-blue font-open_sans uppercase">Contact
                             Us</h4>
                     </div>
-                    <div class="space-x-4 flex">
+                    <div data-aos="fade-right" data-aos-delay="500" class="space-x-4 flex">
                         <div class="text-custom-blue text-4xl">
                             <i class='bx bxs-phone'></i>
                         </div>
                         <div class="space-y-2">
-                            <h1 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
+                            <h4 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
                                 Call Us:
-                            </h1>
+                            </h4>
                             <div>
                                 <p class="text-sm md:text-base font-normal text-white">
                                     +27835132008
@@ -446,34 +446,32 @@
 
                         </div>
                     </div>
-                    <div class="space-x-4 flex">
+                    <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1500" class="space-x-4 flex">
                         <div class="text-custom-blue text-4xl">
                             <i class='bx bxs-envelope'></i>
                         </div>
                         <div class="space-y-2">
-                            <h1 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
+                            <h4 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
                                 Email Us:
-                            </h1>
+                            </h4>
                             <div>
-                                <a href="mailto:info@phanserv.co.za"
-                                    class="block text-sm md:text-base font-normal text-white">
+                                <a href="" id="contact-email" class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
-                                <a href="mailto:info@phanserv.co.za"
-                                    class="block text-sm md:text-base font-normal text-white">
+                                <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
                                     accounts@phanserv.co.za
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="space-x-4 flex">
+                    <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="2000" class="space-x-4 flex">
                         <div class="text-custom-blue text-4xl">
                             <i class='bx bx-current-location'></i>
                         </div>
                         <div class="space-y-2">
-                            <h1 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
+                            <h4 class="text-lg md:text-xl font-semibold font-open_sans text-custom-blue">
                                 Visit Us:
-                            </h1>
+                            </h4>
                             <div>
                                 <p class="text-sm md:text-base font-normal text-white">
                                     22 Gerald Spilkin Street,
@@ -490,6 +488,7 @@
                 </div>
             </div>
         </section>
+
     </main>
     <footer class="text-[hsl(0,_0%,_91%)] bg-[hsl(202,_72%,_15%)]">
         <div class="container">
@@ -515,22 +514,12 @@
                         </li>
 
                         <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
-                                <i class="bx bxl-twitter"></i>
+                            <a href="" id="contact-email" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                                <i class="bx bx-envelope"></i>
                             </a>
                         </li>
 
-                        <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
-                                <i class="bx bxl-instagram"></i>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
-                                <i class="bx bxl-youtube"></i>
-                            </a>
-                        </li>
+                        
 
                     </ul>
 
@@ -599,11 +588,14 @@
                     </li>
 
                     <li>
-                        <a href="#" class="">22 Gerald Spilkin Street, Umtata, 5099</a>
+                        <a href="./index.html" class="">22 Gerald Spilkin Street, Umtata, 5099</a>
                     </li>
 
                     <li>
-                        <a href="#" class="">Testimonials</a>
+                        <a href="" id="contact-email" class="">info@phanserv.co.za</a>
+                    </li>
+                    <li>
+                        <a href="" class="contact-email">+27835132008</a>
                     </li>
 
                     <li>
